# monostate

./: .coveragerc  .gitignore  License.txt  Makefile  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: build.yaml
monostate/: __init__.py  monostate.py  owner.py  possessor.py
tests/: test_mono_state.py  test_mono_state_owner.py
